--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family-Chakra+Petch:w ght@400:700&display=swap'); 
+  @import url('https://fonts.googleapis.com/css2?family-Chakra+Petch:w ght@400:700&display=swap'); 
 :root{
     --cor-de-fundo: #1E1E1E;
     --verde: #6FFF57;
@@ -42,4 +42,26 @@
     justify-content: center;
     padding: 1em;
     font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
 }
+
+.botao:first-child{
+    border-radius: 40px 40px 0 0;
+}
+
+.botoes{ 
+    display: block;}
+
+@media screen and (min-width:768px) {
+    .botoes{ 
+        display: flex;}
+
+        .botao:first-child{
+            border-radius: 40px 0 0 0;
+        }
+    }
