--- a/style.css
+++ b/style.css
@@ -57,11 +57,21 @@
 .botoes{ 
     display: block;}
 
+.ativo{
+
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
 @media screen and (min-width:768px) {
     .botoes{ 
         display: flex;}
 
         .botao:first-child{
             border-radius: 40px 0 0 0;
+        }
+
+        .botao:last-child{
+            border-radius: 0 40px 0 0;
         }
     }
